--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -73,6 +73,11 @@
                         <i class="bi bi-graph-up-arrow me-2"></i> Reports & Stats
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" routerLink="/configuration" routerLinkActive="active" (click)="closeSidebarOnMobile()">
+                        <i class="bi bi-gear me-2"></i> Configuration
+                    </a>
+                </li>
             </ul>
             </div>
         </div>
