cancellation reason added and some validations

--- a/src/app/components/edit-product/edit-product.component.html
+++ b/src/app/components/edit-product/edit-product.component.html
@@ -166,11 +166,11 @@
                     <input type="number" class="form-control" [id]="'platformFeeSeller-' + i" formControlName="platformFeeSeller" min="0" step="0.01">
                   </div>
                   
-                  <!-- GST Percentage for Level -->
+                  <!-- GST Percentage for Level 
                   <div class="col-6 col-md-3">
                     <label [for]="'levelGstPercentage-' + i" class="form-label">Level GST (%)</label>
                     <input type="number" class="form-control" [id]="'levelGstPercentage-' + i" formControlName="gstPercentage" min="0" max="100" step="0.1">
-                  </div>
+                  </div>-->
                   
                   <!-- Platform Fee Type -->
                   <div class="col-6 col-md-3">
