--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -78,6 +78,11 @@
                         <i class="bi bi-gear me-2"></i> Configuration
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" routerLink="/cancellation-reasons" routerLinkActive="active" (click)="closeSidebarOnMobile()">
+                        <i class="bi bi-x-circle me-2"></i> Cancellation Reasons
+                    </a>
+                </li>
             </ul>
             </div>
         </div>
